# reaction-diffusion

./: CMakeLists.txt
src/: main.c  reactdiffuse.c  reactdiffuse.h
